<resources>
    <string name="app_name">LocateMyRabbit</string>
    <string name="txt_signin">SignIn</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#FF3700B3">Register Now</font></string>
    <string name="txt_no_account_signin">Already have an account? <font color="#FF3700B3">Signin Now</font></string>
    <string name="please_wait">Please wait..</string>
    <string name="txt_login">Login to find your rabbit</string>
    <string name="txt_signup_to_find_rabbit">Signup to find your rabbit</string>
    <!--<string name="txt_signup">Signup</string>-->
    <string name="placeholder">Placeholder</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="email">Email</string>
    <string name="verification_code">Send verification code</string>
    <string name="send">Send</string>
    <string name="send_code">Send code</string>
    <string name="retype_password">Retype Password</string>
    <string name="txt_signup">Sign Up</string>
</resources>