<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingTop="32dp"
        android:paddingBottom="60dp">

        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:src="@drawable/perky_rabbit"
            android:textSize="30sp"
            android:contentDescription="@string/placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/averta_bold"
            android:text="@string/txt_login"
            android:textColor="@color/light_gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_mergin_40"
            android:fontFamily="@font/averta_semibold"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/layout_mergin_10"
            android:paddingBottom="@dimen/layout_mergin_5"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/black">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tie_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:maxLength="@integer/material_motion_duration_long_1"
                android:padding="15dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/averta_semibold"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/layout_mergin_10"
            android:paddingBottom="@dimen/layout_mergin_5"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:passwordToggleDrawable="@drawable/show_password_selector"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:boxStrokeColor="@color/black">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tie_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="@integer/material_motion_duration_long_1"
                android:padding="15dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/averta_semibold"
            android:text=""
            android:textColor="@color/colorError"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.Material3.Button"
            android:backgroundTint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_mergin_20"
            android:fontFamily="@font/averta_bold"
            android:text="@string/txt_signin"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/averta_semibold"
            android:text="@string/txt_no_account_signup"
            android:textSize="14sp" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress_bar"
            android:indeterminate="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>